<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.Fragment.LoaiSach_Framgment"
        android:label="@string/QuanLyPhieuMuon"
        tools:layout="@layout/fragment_phieumuon">
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.Fragment.NguoiDung_Fragment"
        android:label="@string/QuanLyLoaiSach"
        tools:layout="@layout/fragment_nguoidung">
        <action
            android:id="@+id/action_nav_gallery_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.Fragment.LoaiSach_Fragment"
        android:label="@string/QuanLySach"
        tools:layout="@layout/fragment_loaisach">
        <action
            android:id="@+id/action_nav_slideshow_to_nav_ThuThu"
            app:destination="@id/nav_ThuThu" />
    </fragment>
    <fragment
        android:id="@+id/nav_ThuThu"
        android:name="com.example.myapplication.Fragment.LoaiSach_Fragment"
        android:label="@string/QuanLyThanhVien"
        tools:layout="@layout/fragment_phieu_muon" />
</navigation>